# inotify-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  FileSystemEvent.cc  FileSystemEvent.h  Inotify.cc  Inotify.h  LICENSE  Makefile  README.md  conanfile.py  main.cc
.github/: FUNDING.yml
.github/workflows/: build_and_test.yml  example.yml
example/: CMakeLists.txt  main.cpp
include/inotify/: Event.h  FileSystemEvent.h  Inotify.h  Notification.h  NotifierBuilder.h
include/inotify-cpp/: Inotify.h  NotifierBuilder.h
source/: CMakeLists.txt  Event.cpp  FileSystemEvent.cpp  Inotify.cpp  NotifierBuilder.cpp
src/: CMakeLists.txt  Event.cpp  FileSystemEvent.cpp  Inotify.cpp  Notification.cpp  NotifierBuilder.cpp  inotify-cppConfig.cmake
src/include/inotify-cpp/: Event.h  FileSystemAdapter.h  FileSystemEvent.h  Inotify.h  Notification.h  NotifierBuilder.h
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  main.cpp
test/unit/: CMakeLists.txt  EventTests.cpp  NotifierBuilderTests.cpp  main.cpp
